# tizenclaw-llm-plugin-sample

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
.agents/workflows/: AGENTS.md
docs/: plugin_creation_guide_en.md  plugin_creation_guide_ko.md
packaging/: tizen-manifest.xml  tizenclaw-llm-plugin-sample.spec  tizenclaw-openai-backend.spec
res/: plugin_llm_config.json
src/: openai_plugin.cc  plugin-sample.cc
